htdocs/content/themes/ncoa/assets/scss/components/_white-label.scss
/* ... */
.program-highlights {
  padding: 25px 0;

  .no-flexbox & {
    &:after {
      content: "";
      display: table;
      clear: both;
    }
  }

  &__list {
    width: 100%;
    list-style: none;
    margin: 0;
    padding: 0;

    @media screen and (min-width: 768px) {
      justify-content: center;
      display: flex;
    }
  }

  &__list li,
  .program-highlights-carousel-container .item {
    max-width: 500px;
    margin-left: auto;
    margin-right: auto;

    @media screen and (min-width: 768px) {
      width: 33.33333%;
      position: relative;
      display: flex;
      flex: 1;
      max-width: none;
    }

    .no-flexbox & {
      float: left;
    }

    &:not(:first-child) {
      border-top: 2px solid #ccc;
      padding-top: 40px;
      margin-top: 40px;

      @media screen and (min-width: 768px) {
        border-top: none;
        padding-top: 0;
        margin-top: 0;
      }

      &:before {
        @media screen and (min-width: 768px) {
          content: '';
          width: 2px;
          height: 100%;
          background: #ccc;
          position: absolute;
          top: 0;
          left: 0;
        }
      }
    }
  }

  .program-highlights-carousel-container .item {

    &:not(:first-child) {
      border-top: none;
      padding-top: 0;
      margin-top: 0;

      &:before {
        @media screen and (min-width: 768px) {
          left: -2px;
        }
      }
    }
  }

  &__btn {
    display: block;
    text-align: center;
  }
}


.program-highlights-carousel {
  padding-top: 0;
  padding-bottom: 0;
  max-width: 525px;
  margin-left: auto;
  margin-right: auto;

  @media screen and (min-width: 768px) {
    max-width: none;
  }

  .program-highlights-carousel-container {
    padding: 0 20px;

    @media screen and (min-width: 400px) {
      padding: 0 60px;
    }
  }

  .slick-list {
    position: relative;

    &:before {
      @media screen and (min-width: 768px) {
        content: '';
        width: 2px;
        height: 100%;
        background: #f6f6f6;
        position: absolute;
        top: 0;
        right: 0;
        z-index: 10;
      }
    }

    &:after {
      @media screen and (min-width: 768px) {
        content: '';
        width: 2px;
        height: 100%;
        background: #f6f6f6;
        position: absolute;
        top: 0;
        left: 0;
        z-index: 10;
      }
    }
  }

  .item {
    background: transparent;
    margin-right: 0;
    padding: 0;

    a {
      display: inline-block;
    }

    img {
      max-height: 104px;
      margin: 0 auto;
      max-width: 100%;
    }
  }
  
  .fa {
    color: #1888de;
  }

  .fa.slick-arrow {
    display: inline-block !important; // overridding some inline styles via JS
    font-size: 1.1111em;
    position: absolute;
    top: 45%;
    z-index: 100;

    @media screen and (min-width: 400px) {
      font-size: 2.2222em;
    }

    &:hover {
      cursor: pointer;
      color: #115e99;
    }
  }

  .fa.slick-arrow.fa-chevron-left {
    left: 10px;
  }

  .fa.slick-arrow.fa-chevron-right {
    right: 10px;
  }

  .count {
    display: none;
  }

  .controls {
    padding: 0;
  }
}

.program-highlight {
  text-align: center;
  padding: 0 20px 10px;
  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: space-between;

  &__icon {
    width: 80px;
    height: 80px;
    margin: 0 auto;

    &-wrap {
      background-color: #FFFFFF;
      border-radius: 50%;
      display: table-cell !important;
      vertical-align: middle;
      text-align: center;
      width: 80px;
      height: 80px;
    }

    img {
      height: 60px;
      width: 60px;
    }
  }

  &__text {
    max-width: 320px;
    margin: 0 auto 16px;
    align-self: center;
    -webkit-font-smoothing: antialiased;
  }

  &__title {
    color: $brand-blue;
    font-weight: 700;
    font-size: 1em;
    line-height: 1.3;
    margin-top: 14px;
  }
}

.reminder {
  background: $brand-orange;
  color: #FFF;
  text-align: center;
  padding: 50px 80px;

  p {
    font-size: 1.3em;
    -webkit-font-smoothing: antialiased;
  }
}

.exclamation {
  strong {
    position: relative;

    &:before {
      content: '';
      background: transparent url('../images/reminder.svg') center center;
      background-size: 45px 45px;
      width: 45px;
      height: 45px;
      position: absolute;
      display: block;
      top: -8px;
      left: -60px;
    }
  }
}

.white-bg {
  background: #FFFFFF;
}

.grid-1-to-2 {
  width: 100%;
  padding: 60px 0;
  max-width: 500px;
  margin-left: auto;
  margin-right: auto;

  @media (min-width: 768px) {
    display: flex;
    max-width: none;
  }

  .no-flexbox & {
    &:after {
      @media (min-width: 768px) {
        content: "";
        display: table;
        clear: both;
      }
    }
  }


  &__1 {
    padding: 0 20px 20px;
    border-bottom: 2px solid #ccc;
    margin-bottom: 30px;

    @media (min-width: 768px) {
      width: percentage(1/3);
      border-bottom: 0;
      padding-bottom: 0;
      margin-bottom: 0;
    }

    @media screen and (min-width: 992px) {
      padding: 0 80px;
    }
  }

  &__2 {
    position: relative;
    padding: 0 20px;

    @media (min-width: 768px) {
      padding: 0 40px;
      width: percentage(2/3);
    }

    @media screen and (min-width: 992px) {
      padding: 0 80px;
    }

    @media screen and (min-width: 1200px) {
      padding: 0 120px;
    }

    &:before {
      @media screen and (min-width: 768px) {
        content: '';
        width: 2px;
        height: 100%;
        background: #ccc;
        position: absolute;
        top: 0;
        left: 0;
      }
    }
  }

  &__1,
  &__2 {
    .no-flexbox & {
      @media (min-width: 768px) {
        float: left;
      }
    }
  }
}

.shortcuts {
  h3 {
    color: $brand-light-blue;
    font-weight: 700;
  }

  ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  a {
    color: #666;
    display: block;
    padding: 10px 0;
    text-decoration: none;
  }
}
/* ... */

